Factored the CIO Now dashboard into its respective HTML templates that can be used to rebuild the subpages in a consistent manner. Next step is to add the html forms for capturing the data.

--- a/templates/blueprints/compute/gather_requirements.html
+++ b/templates/blueprints/compute/gather_requirements.html
@@ -1,11 +1,7 @@
-{% extends "base.html" %}
+{% extends "layouts/sub_page_layout.html" %}
 
-{% block pg_specific_title %}
-Compute Requirements
-{% endblock %}
+{% block pg_specific_title %}} Compute Requirements {% endblock %}
 
-{% block pg_content %}
-
-Hello World again
-
+{% block sub_pg_content %}
+    Todo: Add Forms
 {% endblock %}
