--- a/templates/blueprints/compute/submit_requirements.html
+++ b/templates/blueprints/compute/submit_requirements.html
@@ -9,23 +9,20 @@
              <!--Todo Ask the user to choose between selecting a team and creating a new requirement. Once decided show the appropriate form -->
             <div class="row">
                 <div class="col-sm-12">
-                    <div id="team-select-dropdown" class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                            Select Team
-                            <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
+                    <div class="form-group">
+                        <select id="select-team-dropdown" class="form-control">
                             <!--Todo: dynamically query for options -->
-                            <li><a href="#">New Team</a></li>
-                            <li><a href="#">GDN</a></li>
-                            <li><a href="#">CIO</a></li>
-                            <li><a href="#">External</a></li>
-                        </ul>
+                            <option value="New Team">New Team</option>
+                            <option value="GDN">GDN</option>
+                            <option value="External">External</option>
+                            <option value="CIO-NOW">CIO Now</option>
+                        </select>
                     </div>
                 </div>
             </div>
             <br>
             <br>
-            <div class="row" hidden="hidden">
+            <div class="row">
                 <div class="col-sm-6">
                     <div id="team-form" class="form-group">
                         <div id="bm-req-form" class="form-group">
@@ -35,12 +32,15 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div id="vm-req-form" class="form-group">
-                        <h3>Create a new Team</h3>
-                        {{ render_requirements_form(forms.create_team, url_for('compute.create_team')) }}
-
-                        <h3>Create a new VM Requirement</h3>
-                        {{ render_requirements_form(forms.create_virtual, url_for('compute.create_team')) }}
+                    <div class="form-group">
+                        <div id="create-team-form" class="container-fluid" hidden>
+                            <h3>Create a new Team</h3>
+                            {{ render_requirements_form(forms.create_team, url_for('compute.create_team')) }}
+                        </div>
+                        <div id="create-vm-req" class="container-fluid">
+                            <h3>Create a new VM Requirement</h3>
+                            {{ render_requirements_form(forms.create_virtual, url_for('compute.create_team')) }}
+                        </div>
                     </div>
                 </div>
                 <div class="container">
@@ -54,5 +54,17 @@
 {% endblock %}
 
 {% block pg_specific_javascript %}
+    <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+    <script>
+        require(['{{ url_for('compute.static', filename='js/custom/init.js') }}'], function (config) {
+            //Load the main module for the manage-fences page.
+            require(['custom/team-req']);
+        });
+    </script>
+    <!--script data-main="{{ url_for('compute.static', filename='js/custom/team-req.js') }}"
+            src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script-->
+{#    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.min.js"></script>#}
+{#    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>#}
+{#    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>#}
     <script type="text/javascript" src="{{ url_for('compute.static', filename='js/custom/team-req.js') }}"></script>
 {% endblock %}
