more updates to the front end

--- a/templates/blueprints/compute/submit_requirements.html
+++ b/templates/blueprints/compute/submit_requirements.html
@@ -24,7 +24,7 @@
             <br>
             <div class="row">
                 <div class="col-sm-6">
-                    <div id="team-form" class="form-group">
+                    <div class="form-group">
                         <div id="bm-req-form" class="form-group">
                              <h3>Create new Bare Metal Server Requirement</h3>
                             {{ render_requirements_form(forms.create_physical, url_for('compute.create_team')) }}
