--- a/templates/blueprints/compute/submit_requirements.html
+++ b/templates/blueprints/compute/submit_requirements.html
@@ -58,13 +58,12 @@
     <script>
         require(['{{ url_for('compute.static', filename='js/custom/init.js') }}'], function (config) {
             //Load the main module for the manage-fences page.
-            require(['custom/team-req']);
+            require(['team-req'], function(main) {
+                console.log(main);
+            });
+
         });
     </script>
-    <!--script data-main="{{ url_for('compute.static', filename='js/custom/team-req.js') }}"
-            src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script-->
-{#    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.min.js"></script>#}
-{#    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>#}
-{#    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>#}
-    <script type="text/javascript" src="{{ url_for('compute.static', filename='js/custom/team-req.js') }}"></script>
+{#    <script data-main="{{ url_for('compute.static', filename='js/custom/team-req.js') }}"#}
+{#            src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>#}
 {% endblock %}
