--- a/templates/blueprints/compute/submit_requirements.html
+++ b/templates/blueprints/compute/submit_requirements.html
@@ -54,7 +54,7 @@
 {% endblock %}
 
 {% block pg_specific_javascript %}
-    <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
     <script>
         require(['{{ url_for('compute.static', filename='js/custom/init.js') }}'], function (config) {
             //Load the main module for the manage-fences page.
